RESOLVED FIXED270096
REGRESSION (275173@main): [ MacOS wk2 Debug] webrtc/h265.html is a constant timeout
https://bugs.webkit.org/show_bug.cgi?id=270096
Summary REGRESSION (275173@main): [ MacOS wk2 Debug] webrtc/h265.html is a constant t...
Jay Stfleur
Reported 2024-02-26 09:47:24 PST
Description: webrtc/h265.html Is a constant time out on Monterey+ WK2 Debug History: https://results.webkit.org/?suite=layout-tests&test=webrtc%2Fh265.html Diff/Image Diff/Crash Log: https://build.webkit.org/results/Apple-Sonoma-Debug-WK2-Tests/275313@main%20(1015)/webrtc/h265-diff.txt --- /Volumes/Data/worker/Apple-Sonoma-Debug-WK2-Tests/build/layout-test-results/webrtc/h265-expected.txt +++ /Volumes/Data/worker/Apple-Sonoma-Debug-WK2-Tests/build/layout-test-results/webrtc/h265-actual.txt @@ -1,13 +1,5 @@ +FAIL: Timed out waiting for notifyDone to be called + Video should be running, go to black and running. Following, should be a snapshot of the video, a black frame and a snapshot of the video. - -PASS H265 in getCapabilities -PASS Verify H265 activation -PASS Setting video exchange -PASS Ensuring connection state is connected -PASS Track is enabled, video should not be black -PASS Track is disabled, video should be black -PASS Track is enabled, video should not be black 2 -PASS outbound qpSum -
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-26 09:47:50 PST
Jay Stfleur
Comment 2 2024-02-26 10:02:35 PST
Reproducibility: run-webkit-tests --root webrtc/h265.html --iterations 5
EWS
Comment 3 2024-02-28 00:55:31 PST
Committed 275434@main (cd09e2f7f97f): <https://commits.webkit.org/275434@main> Reviewed commits have been landed. Closing PR #25159 and removing active labels.
youenn fablet
Comment 4 2024-03-07 11:28:33 PST
*** Bug 270645 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.