REGRESSION (275173@main): [ MacOS wk2 Debug] webrtc/h265.html is a constant timeout rdar://123637394 https://bugs.webkit.org/show_bug.cgi?id=270096

Reviewed by Eric Carlson.

We were using the SPS sps_max_num_reorder_pics to compute the reorder window size.
But it appears from testing and from Chrome source code that we should instead use the VPS vps_max_num_reorder_pics.
We should probably get the VPS from PPS -> SPS -> VPS chain but for now, we use the first VPS available.

We add VPS parsing up to vps_max_num_reorder_pics.
We make use of it for computing the reorder window size for both HVCC and AnnexB cases.

Covered by LayoutTests/webrtc/h265.html and LayoutTests/http/tests/webcodecs/ HEVC tests.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/ThirdParty/libwebrtc/Source/webrtc/common_video/h265/h265_vps_parser.cc:
* Source/ThirdParty/libwebrtc/Source/webrtc/common_video/h265/h265_vps_parser.h:
* Source/ThirdParty/libwebrtc/Source/webrtc/sdk/objc/components/video_codec/RTCVideoDecoderH265.mm:
(vpsDataFromHvcc):
(ComputeH265ReorderSizeFromVPS):
(ComputeH265ReorderSizeFromHVCC):
(ComputeH265ReorderSizeFromAnnexB):
(spsDataFromHvcc): Deleted.
(ComputeH265ReorderSizeFromSPS): Deleted.

Canonical link: https://commits.webkit.org/275434@main